macros/blueprint-proc-macro/tests/invalid_cases/job/01_missing_params.stderr
error: unexpected end of input, Missing 'params' argument in attribute
 --> tests/invalid_cases/job/01_missing_params.rs:3:1
  |
3 | #[job(result(Vec<u8>))]
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `job` (in Nightly builds, run with -Z macro-backtrace for more info)
